--- a/css/manage_edit_sake.css
+++ b/css/manage_edit_sake.css
@@ -200,6 +200,10 @@ input[name="sakagura_name"] {
   border: 1px solid #d2d2d2;
 }
 
+.column2 label input::placeholder {
+  color: #b2b2b2;
+}
+
 .row {
   display: flex;
   flex-wrap: nowrap;
