--- a/css/sake_view.css
+++ b/css/sake_view.css
@@ -381,17 +381,15 @@
 
 #preview_thumbnail_container {
   display: none;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  grid-auto-rows: 75px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2px;
   width: 100%;
-  height: 100%;
 }
 
 .sakeimage_thumbnail {
-  width: 60px;
-  height: 60px;
-  padding: 2px;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
 
@@ -1634,7 +1632,7 @@
   }
 
   #preview_thumbnail_container {
-    display: flex;
+    display: grid;
     margin-top: 16px;
   }
 
